--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "@d1plo1d/slicer-render-example",
+  "name": "@d1plo1d/browser-gcode-sender-example",
   "version": "1.0.0",
   "main": "index.js",
   "author": "D1plo1d",
-  "license": "AGPL-3.0",
+  "license": "MIT",
   "devDependencies": {
-    "@parcel/transformer-inline-string": "^2.0.1",
     "parcel": "^2.0.1",
-    "@d1plo1d/nom-reprap-response-wasm": "link:../nom-reprap-response-wasm/pkg/"
+    "@d1plo1d/browser-gcode-sender": "link:../browser-gcode-sender/"
   }
 }
