--- a/nom-reprap-response-wasm/pkg/package.json
+++ b/nom-reprap-response-wasm/pkg/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nom-reprap-response",
-  "version": "0.3.0",
+  "name": "nom-reprap-response-wasm",
+  "version": "0.1.0",
   "files": [
     "web_bg.wasm",
     "web.js",
